--- a/playlist.html
+++ b/playlist.html
@@ -72,11 +72,6 @@
     <li>Shawn Mendes</li>
     <li>Illuminate (Deluxe)</li>
     <li class="puntos">...</li>
-    <li><a href="audio/The Weeknd - Alone Again (Audio).mp3" target="_blank"><img class="fotoartista" src="img/theweeknd.jpg" alt="theweekend" srcset=""></a></li>
-    <li>Alone Again</li>
-    <li>The Weeknd</li>
-    <li>After Hours</li>
-    <li class="puntos">...</li>
     <li><a href="audio/Travis Scott - STARGAZING (Audio).mp3" target="_blank"><img class="fotoartista" src="img/travis.jpg" alt="travis" srcset=""></a></li>
     <li>STARGAZING</li>
     <li>Travis Scott</li>
@@ -134,6 +129,27 @@
     <li class="puntos">...</li>
     </ul> 
 </div>
+<ul class="icono-play">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+    <img class="icono" src="img/logoplay.png" alt="">
+</ul>
 <section class="p-celu">
     <div class="mobile">
         <ul class="play-celu">
