--- a/index.html
+++ b/index.html
@@ -17,9 +17,25 @@
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
       </ul> 
   </div>
-   <section class="banner">
-       <img class="banner" src="../ProyectoIntegrador/img/technomusica.jpg" alt="banner" srcset=""> 
-   </section>
+  <section>
+    <div class="slider">
+        <input type="radio" id="btn-1" name="toggle" checked>
+        <input type="radio" id="btn-2" name="toggle">
+        <input type="radio" id="btn-3" name="toggle">
+        <div class="slider-controls">
+            <label for="btn-1"></label>
+            <label for="btn-2"></label>
+            <label for="btn-3"></label>
+        </div>                    
+        <div class="slider-inner">
+            <div class="slider-slides">
+                <img src="img/techno1.jpg">
+                <img src="img/techno2.jpg">
+                <img src="img/techno3.png" alt="">
+            </div>                        
+        </div>
+    </div>
+</section>
    <footer class="todos">   
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
