--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         </div>
     </div>
 </section>
+<section class="banner">
+    <img class="banner" src="img/technomusica.jpg" alt="">
+</section>
    <footer class="todos">   
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
