--- a/playlist.html
+++ b/playlist.html
@@ -129,7 +129,7 @@
     <li class="puntos">...</li>
     </ul> 
 </div>
-<ul class="icono-play">
+<!-- <ul class="icono-play">
     <img class="icono" src="img/logoplay.png" alt="">
     <img class="icono" src="img/logoplay.png" alt="">
     <img class="icono" src="img/logoplay.png" alt="">
@@ -150,6 +150,7 @@
     <img class="icono" src="img/logoplay.png" alt="">
     <img class="icono" src="img/logoplay.png" alt="">
 </ul>
+ -->
 <section class="p-celu">
     <div class="mobile">
         <ul class="play-celu">
