--- a/detail.html
+++ b/detail.html
@@ -11,26 +11,27 @@
     <div class="grid-container">
         <ul>
         <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-        <li><a class="titulos" href="detail.html">TRACKS</a></li>
-        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
+        <li><a class="titulos" href="">TRACKS</a></li>
+        <li><a class="titulos" href="">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>    
     </div>
     <div class="orden">
-        <header>
+        <header class="principio">
             <h1 class="titulo">The Weekend</h1>
             <img class="weeknd" src="../ProyectoIntegrador/img/theweekvalu.jpg" alt="" srcset="">
-            <ul>
-                <li class="descripcion">Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
-                Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.
-                </li>
-            </ul>
-            <ul class="iconos-redes">
-                <a href="https://www.instagram.com/theweeknd/?hl=es-la"><img class="instagram" src="img/logoinsta.png" alt=""></a>
+            <div class="descripcion">
                 <a href="https://twitter.com/theweeknd?lang=es"><img class="twitter" src="img/logotwitter.png" alt=""></a>
-            </ul>
+                <a href="https://www.instagram.com/theweeknd/?hl=es-la"><img class="instagram" src="img/logoinsta.png" alt=""></a>
+               <p>Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
+                Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.</p> 
+            </div>
         </header>
+    </div>
+    <div class="tablet">
+        <p>Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
+            Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.</p>
     </div>
     <section class="foto-albumes">
         <div class="fotos">
