--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoIntegrador/css/detail.css">
+    <link rel="stylesheet" href="css/detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <title>Detail</title>
 </head>
@@ -20,7 +20,7 @@
     <div class="orden">
         <header class="principio">
             <h1 class="titulo">The Weekend</h1>
-            <img class="weeknd" src="../ProyectoIntegrador/img/theweekvalu.jpg" alt="" srcset="">
+            <img class="weeknd" src="img/theweekvalu.jpg" alt="" srcset="">
             <div class="descripcion">
                 <a href="https://twitter.com/theweeknd?lang=es"><img class="twitter" src="img/logotwitter.png" alt=""></a>
                 <a href="https://www.instagram.com/theweeknd/?hl=es-la"><img class="instagram" src="img/logoinsta.png" alt=""></a>
@@ -35,22 +35,22 @@
     </div>
     <section class="foto-albumes">
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/beautybehind.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="img/beautybehind.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/kiss land.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="img/kiss land.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/starboy.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="img/starboy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/trilogy.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="img/trilogy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/reminder.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="img/reminder.jpg" alt="mydearmelancholy" srcset="">
         </div>
     </section>
     <h2 class="populares">Populares</h2>
@@ -64,7 +64,7 @@
         </ul>
     </div>
     <div class="album1">
-        <img class="after-hours"src="../ProyectoIntegrador/img/albumafterhours.jpg" alt="">
+        <img class="after-hours"src="img/albumafterhours.jpg" alt="">
         <p class="nombre-after-hours">After Hours</p>
         <ul class="after-hrs">
             <li>1. Alone Again</li>
