--- a/playlist.html
+++ b/playlist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoIntegrador/css/playlist.css">
+    <link rel="stylesheet" href="css/playlist.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <title>Playlist</title>
 </head>
@@ -176,5 +176,6 @@
     </div>
 </section>
 </div>
+<script src="playlist.js"></script>
 </body>
 </html>
