--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoIntegrador/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
@@ -42,9 +42,9 @@
    <footer class="todos">   
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
-        <ul>
-            <li> <a href="detail.html" class="artista">The Weeknd</a></li>
-            <li> <a href="detail.html" class="artista">Drake</a></li> 
+        <ul class="artist">
+            <!-- <li> <a href="detail.html" class="artista"></a></li> -->
+            <!-- <li> <a href="detail.html" class="artista">Drake</a></li> 
             <li> <a href="detail.html" class="artista">Post Malone</a></li>
             <li> <a href="detail.html" class="artista">Dua Lipa</a></li>
             <li> <a href="detail.html" class="artista">Justin Bieber</a></li>
@@ -56,13 +56,13 @@
             <li> <a href="detail.html" class="artista">Imagine Dragons</a></li>
             <li> <a href="detail.html" class="artista">Bruno Mars</a></li>
             <li> <a href="detail.html" class="artista">Sam Smith</a></li>
-            <li> <a href="detail.html" class="artista">J Balvin</a></li>
+            <li> <a href="detail.html" class="artista">J Balvin</a></li> -->
         </ul>
        </section>
        <section class="tracks">
        <h2>TOP ÁLBUMS</h2>
-        <ul>
-            <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li>
+        <ul class= "informacion">
+            <!-- <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li>
             <li> <a href="" class="artista"></a> Tossie Slide</li>
             <li> <a href="" class="artista"></a> Hollywood´s Bleeding</li>
             <li> <a href="" class="artista"></a> Futura Nostalgia</li>
@@ -75,13 +75,13 @@
             <li> <a href="" class="artista"></a> Evolve</li>
             <li> <a href="" class="artista"></a> 24K Magic</li>
             <li> <a href="" class="artista"></a> In The Lonely Hour</li>
-            <li> <a href="" class="artista"></a> OASIS</li>
+            <li> <a href="" class="artista"></a> OASIS</li> -->
         </ul>
        </section>
        <section class="tracks">
         <H2>TOP TRACKS</H2>
-        <ul>
-            <li> <a href="detail.html" class="artista">Blinding Lights</a></li>
+        <ul class="track">
+            <!-- <li> <a href="detail.html" class="artista">Blinding Lights</a></li>
             <li> <a href="" class="artista"></a> Tossie Slide</li>
             <li> <a href="" class="artista"></a> Circles </li>
             <li> <a href="" class="artista"></a> Don´t Start Now</li>
@@ -95,13 +95,13 @@
             <li> <a href="" class="artista"></a> When I Was Your Man</li>
             <li> <a href="" class="artista"></a> To Die For</li>
             <li> <a href="" class="artista"></a> RITMO (Bad Boys For Life)</li>
-            
+             -->
         </ul>
        </section>
    </footer>
    <section class="foto-bandas">
        <div class="fotos">
-         <a href="detail.html"><img class="Theweeknd" src="img/theweekend.jpg" alt="Theweeknd" srcset=""></a>
+         <!-- <a href="detail.html"><img class="Theweeknd" src="img/theweekend.jpg" alt="Theweeknd" srcset=""></a>
        </div>
        <div class="fotos">
         <a href="detail.html"><img class="Drake" src="img/drake (2).jpg" alt="drake" srcset=""></a>
@@ -140,8 +140,9 @@
         <a href="detail.html"><img class="Samsmith" src="img/samsmith.jpg" alt="samsmith" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="jbalvin" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a>
+        <a href="detail.html"><img class="jbalvin" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a> -->
       </div>
    </section>
+   <script src="home.js"></script>
 </body>
-</html>
+</html> 
