--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       </ul> 
   </div>
   <section>
+    <h6>Buscador</h6>
+    <form action="detail.html" method="GET">
+        <input type="text" name="search" placeholder="¿Qué querés buscar?">
+        <button type="submit">Buscar</button> 
+    </form>
     <div class="slider">
         <input type="radio" id="btn-1" name="toggle" checked>
         <input type="radio" id="btn-2" name="toggle">
