--- a/index.html
+++ b/index.html
@@ -18,11 +18,36 @@
       </ul> 
   </div>
   <section>
-    <h6>Buscador</h6>
-    <form action="detail.html" method="GET">
-        <input type="text" name="search" placeholder="¿Qué querés buscar?">
-        <button type="submit">Buscar</button> 
+    <div class="contenedor-form">
+      <div class="toggle">
+        <span>Crear Cuenta</span>
+      </div>
+      <div class="formulario">
+      <h2>Iniciar Sesion</h2>
+    <form action="#" method="GET">
+        <input type="text" name="search" placeholder="Usuario" required>
+        <input type="password" name="search" placeholder="Contraseña" required>
+        <button type="submit">Iniciar Sesion</button> 
     </form>
+  </div>
+  <div class="formulario">
+    <h6>Iniciar Sesion</h6>
+  <form action="detail.html" method="GET">
+      <input type="text" name="search" placeholder="Usuario" required>
+      <input type="password" name="search" placeholder="Contraseña" required>
+      <input type="email" name="search" placeholder="Correo Electronico" required>
+      <input type="text" name="search" placeholder="Telefono" required>
+      <input type="submit" name="search" placeholder="Registrarse" required>
+       <button type="submit">Iniciar Sesion</button> 
+  </form>
+  </div>
+  <div class="reset-password">
+    <a href="#">Olvide mi Contraseña?</a>
+  </div>
+</div>
+
+
+
     <div class="slider">
         <input type="radio" id="btn-1" name="toggle" checked>
         <input type="radio" id="btn-2" name="toggle">
