--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
     </div>
     <div class="orden">
         <header class="principio">
-            <h1 class="titulo">The Weekend</h1>
+            <h1 class="titulo"></h1>
             <img class="weeknd" src="img/theweekvalu.jpg" alt="" srcset="">
             <div class="descripcion">
                 <a href="https://twitter.com/theweeknd?lang=es"><img class="twitter" src="img/logotwitter.png" alt=""></a>
@@ -81,5 +81,6 @@
             <li>12. After Hours</li>
         </ul>
     </div>
+    <script src="details.js"></script>
 </body>
 </html>
