--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
       </ul> 
   </div>
-  <section>
+  <h1>Buscador</h1>
+  <form action="detail.html" method="GET">
+      <input type="text" name="search" placeholder="¿Qué querés buscar?">
+      <button type="submit">Buscar</button>
+  </form>
+  <!-- <section>
     <div class="contenedor-form">
       <div class="toggle">
         <span>Crear Cuenta</span>
@@ -44,7 +49,7 @@
   <div class="reset-password">
     <a href="#">Olvide mi Contraseña?</a>
   </div>
-</div>
+</div> -->
 
 
 
