--- a/playlist.html
+++ b/playlist.html
@@ -26,7 +26,7 @@
     <h2>MY PLAYLIST</h2>
 </div>
 <div class="playlist">
-    <ul>
+    <ul class="playlistWrapper">
     <li><img class= "fotoartista" src="" alt="" srcset=""></li>
     <li class="encabezado">Canción</li>
     <li class="encabezado">Artista </li>
