--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </ul> 
   </div>
   <h1>Buscador</h1>
-  <form action="detail.html" method="GET">
+  <form action="resultados.html" method="GET">
       <input type="text" name="search" placeholder="¿Qué querés buscar?">
       <button type="submit">Buscar</button>
   </form>
