--- a/detail.html
+++ b/detail.html
@@ -15,12 +15,12 @@
         <li><a class="titulos" href="">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
-        </ul>    
+        </ul>
     </div>
     <div class="orden">
         <header class="principio">
             <h1 class="titulo"></h1>
-            <img class="weeknd" src="img/theweekvalu.jpg" alt="" srcset="">
+            <img class="weeknd" src="" alt="" srcset="">
             <div class="descripcion">
                 <a href="https://twitter.com/theweeknd?lang=es"><img class="twitter" src="img/logotwitter.png" alt=""></a>
                 <a href="https://www.instagram.com/theweeknd/?hl=es-la"><img class="instagram" src="img/logoinsta.png" alt=""></a>
@@ -35,7 +35,7 @@
     </div>
     <section class="foto-albumes">
         <div class="fotos">
-            <img class="albumes" src="img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+            <!-- <img class="albumes" src="img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
             <img class="albumes" src="img/beautybehind.jpg" alt="mydearmelancholy" srcset="">
@@ -50,17 +50,17 @@
             <img class="albumes" src="img/trilogy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="img/reminder.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="img/reminder.jpg" alt="mydearmelancholy" srcset=""> -->
         </div>
     </section>
     <h2 class="populares">Populares</h2>
     <div class="container">
         <ul class="popular-song">
-            <li>1. Blinding Lights</li>
+            <!-- <li></li>
             <li>2. In Your Eyes</li>
             <li>3. After Hours</li>
             <li>4. Save Your Tears</li>
-            <li>5. Heartless</li>
+            <li>5. Heartless</li> --> -->
         </ul>
     </div>
     <div class="album1">
