--- a/detail.html
+++ b/detail.html
@@ -34,7 +34,7 @@
             Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.</p>
     </div>
     <section class="foto-albumes">
-        <div class="fotos">
+        <!-- <div class="fotos"> -->
             <!-- <img class="albumes" src="img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
@@ -51,7 +51,7 @@
         </div>
         <div class="fotos">
             <img class="albumes" src="img/reminder.jpg" alt="mydearmelancholy" srcset=""> -->
-        </div>
+        <!-- </div> -->
     </section>
     <h2 class="populares">Populares</h2>
     <div class="container">
@@ -60,14 +60,14 @@
             <li>2. In Your Eyes</li>
             <li>3. After Hours</li>
             <li>4. Save Your Tears</li>
-            <li>5. Heartless</li> --> -->
+            <li>5. Heartless</li> --> 
         </ul>
     </div>
     <div class="album1">
         <img class="after-hours"src="img/albumafterhours.jpg" alt="">
         <p class="nombre-after-hours">After Hours</p>
         <ul class="after-hrs">
-            <li>1. Alone Again</li>
+            <!-- <li>1. Alone Again</li>
             <li>2. Too Late</li>
             <li>3. Hardest to Love</li>
             <li>4. Scared To Live</li>
@@ -78,7 +78,7 @@
             <li>9. In Your Eyes</li>
             <li>10. Save Your Tears</li>
             <li>11. Repeat After Me</li>
-            <li>12. After Hours</li>
+            <li>12. After Hours</li> -->
         </ul>
     </div>
     <script src="details.js"></script>
