--- a/detail.html
+++ b/detail.html
@@ -64,8 +64,8 @@
         </ul>
     </div>
     <div class="album1">
-        <img class="after-hours"src="img/albumafterhours.jpg" alt="">
-        <p class="nombre-after-hours">After Hours</p>
+        <img class="after-hours"src="" alt="">
+        <p class="nombre-after-hours">New Album</p>
         <ul class="after-hrs">
             <!-- <li>1. Alone Again</li>
             <li>2. Too Late</li>
@@ -84,3 +84,4 @@
     <script src="details.js"></script>
 </body>
 </html>
+
