--- a/detail.html
+++ b/detail.html
@@ -24,14 +24,13 @@
             <div class="descripcion">
                 <a href="https://twitter.com/theweeknd?lang=es"><img class="twitter" src="img/logotwitter.png" alt=""></a>
                 <a href="https://www.instagram.com/theweeknd/?hl=es-la"><img class="instagram" src="img/logoinsta.png" alt=""></a>
-               <p>Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
-                Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.</p> 
+               <p></p> 
             </div>
         </header>
     </div>
     <div class="tablet">
-        <p>Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
-            Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.</p>
+        <!-- <p>Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
+            Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.</p> -->
     </div>
     <section class="foto-albumes">
         <!-- <div class="fotos"> -->
