--- a/tracks.html
+++ b/tracks.html
@@ -29,19 +29,9 @@
     </div>
     
 
-    <h2 class="populares">Populares</h2>
-    <div class="container">
-        <ul class="popular-song">
-            <!-- <li></li>
-            <li>2. In Your Eyes</li>
-            <li>3. After Hours</li>
-            <li>4. Save Your Tears</li>
-            <li>5. Heartless</li> --> 
-        </ul>
-    </div>
-
+ 
     
 
-    <script src="albums.js"></script>
+    <script src="tracks.js"></script>
 </body>
 </html>
