--- a/generos.html
+++ b/generos.html
@@ -11,8 +11,8 @@
     <div class="grid-container">
         <ul>
         <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-        <li><a class="titulos" href="">TRACKS</a></li>
-        <li><a class="titulos" href="">ÁLBUM</a></li>
+        <li><a class="titulos" href="tracks.html">TRACKS</a></li>
+        <li><a class="titulos" href="albums.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>
@@ -24,10 +24,12 @@
             <img class="weeknd" src="" alt="" srcset="">
         </header>
     </div>
-    <section class="foto-albumes">
-        <ul class="lista">
-        </ul>
-    <!-- .foto-albumes{
+    <section class="foto-bandas">
+        <div class="fotos">
+            <ul class="lista">
+            </ul>
+        </div>
+          <!-- .foto-albumes{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         gap: 20px;
