--- a/playlist.html
+++ b/playlist.html
@@ -16,8 +16,8 @@
 <div class="grid-container">
     <ul>
         <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-        <li><a class="titulos" href="">TRACKS</a></li>
-        <li><a class="titulos" href="">ÁLBUM</a></li>
+        <li><a class="titulos" href="tracks.html">TRACKS</a></li>
+        <li><a class="titulos" href="albums.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
     </ul>  
