--- a/resultados.html
+++ b/resultados.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/resultados.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<h1>Resultados de búsqueda</h1>
-    <ul class="lista"> 
-    </ul>
 <body>
+    <div class="grid-container">
+        <ul>
+        <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
+        <li><a class="titulos" href="tracks.html">TRACKS</a></li>
+        <li><a class="titulos" href="albums.html">ÁLBUM</a></li>
+        <li><a class="titulos" href="detail.html">ARTIST</a></li>
+        <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+        </ul>
+    </div>
+<h1>Resultados de búsqueda</h1> 
+
+<section class="foto-bandas"> 
+    <div class="fotos">
+        <ul class="lista"> 
+        </ul>
+    </div>
+</section>
     <script src="resultados.js"></script>
 </body>
 </html>
