--- a/detail.html
+++ b/detail.html
@@ -80,6 +80,16 @@
             <li>12. After Hours</li> -->
         </ul>
     </div>
+    <footer class="footer">
+        <div class="futer">
+          <ul class="fin">
+            <li class="contenido-footer">Deezer</li>
+            <li class="contenido-footer">Catalina Rosella</li>
+            <li class="contenido-footer">Nataly Yemal</li>
+            <li class="contenido-footer">Valentina Drechsler</li>
+          </ul>
+        </div>
+     </footer>
     <script src="details.js"></script>
 </body>
 </html>
