--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
       </ul> 
   </div>
-  <h1>Buscador</h1>
+  <div class="buscador">
+  <h1 class="ocultar">Buscador</h1>
   <form action="resultados.html" method="GET">
-      <input type="text" name="search" placeholder="¿Qué querés buscar?">
-      <button type="submit">Buscar</button>
+      <input class='buscar' type="text" name="search" placeholder="¿Qué querés buscar?">
+      <button class='boton-buscador' type="submit">Buscar</button>
   </form>
+</div>
   <!-- <section>
     <div class="contenedor-form">
       <div class="toggle">
@@ -50,7 +52,6 @@
     <a href="#">Olvide mi Contraseña?</a>
   </div>
 </div> -->
-
 
 
     <div class="slider">
@@ -183,6 +184,17 @@
         <a href="detail.html"><img class="jbalvin" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a> -->
       </div>
    </section>
+   <footer class="footer">
+      <div class="futer">
+        <ul class="fin">
+          <li class="contenido-footer">Deezer</li>
+          <li class="contenido-footer">Catalina Rosella</li>
+          <li class="contenido-footer">Nataly Yemal</li>
+          <li class="contenido-footer">Valentina Drechsler</li>
+        </ul>
+      </div>
+   </footer>
+   
    <script src="home.js"></script>
 </body>
 </html> 
