--- a/resultados.html
+++ b/resultados.html
@@ -25,6 +25,16 @@
         </ul>
     </div>
 </section>
+<footer class="footer">
+    <div class="futer">
+      <ul class="fin">
+        <li class="contenido-footer">Deezer</li>
+        <li class="contenido-footer">Catalina Rosella</li>
+        <li class="contenido-footer">Nataly Yemal</li>
+        <li class="contenido-footer">Valentina Drechsler</li>
+      </ul>
+    </div>
+ </footer>
     <script src="resultados.js"></script>
 </body>
 </html>
