--- a/albums.html
+++ b/albums.html
@@ -39,8 +39,16 @@
             <li>5. Heartless</li> --> 
         </ul>
     </div>
-
-    
+    <footer class="footer">
+        <div class="futer">
+          <ul class="fin">
+            <li class="contenido-footer">Deezer</li>
+            <li class="contenido-footer">Catalina Rosella</li>
+            <li class="contenido-footer">Nataly Yemal</li>
+            <li class="contenido-footer">Valentina Drechsler</li>
+          </ul>
+        </div>
+     </footer>
 
     <script src="albums.js"></script>
 </body>
