--- a/generos.html
+++ b/generos.html
@@ -36,7 +36,16 @@
         padding-top: 3%;
     } --> 
     </section>
-
+    <footer class="footer">
+        <div class="futer">
+          <ul class="fin">
+            <li class="contenido-footer">Deezer</li>
+            <li class="contenido-footer">Catalina Rosella</li>
+            <li class="contenido-footer">Nataly Yemal</li>
+            <li class="contenido-footer">Valentina Drechsler</li>
+          </ul>
+        </div>
+     </footer>
     <script src="generos.js"></script>
 </body>
 </html>
