--- a/playlist.html
+++ b/playlist.html
@@ -176,6 +176,16 @@
     </div>
 </section>
 </div>
+<footer class="footer">
+    <div class="futer">
+      <ul class="fin">
+        <li class="contenido-footer">Deezer</li>
+        <li class="contenido-footer">Catalina Rosella</li>
+        <li class="contenido-footer">Nataly Yemal</li>
+        <li class="contenido-footer">Valentina Drechsler</li>
+      </ul>
+    </div>
+ </footer>
 <script src="playlist.js"></script>
 </body>
 </html>
