--- a/tracks.html
+++ b/tracks.html
@@ -27,7 +27,16 @@
             <img class="weeknd" src="" alt="" srcset="">
         </header>
     </div>
-    
+    <footer class="footer">
+        <div class="futer">
+          <ul class="fin">
+            <li class="contenido-footer">Deezer</li>
+            <li class="contenido-footer">Catalina Rosella</li>
+            <li class="contenido-footer">Nataly Yemal</li>
+            <li class="contenido-footer">Valentina Drechsler</li>
+          </ul>
+        </div>
+     </footer>
 
  
     
