--- a/artistastodos.html
+++ b/artistastodos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/detail.css">
+    <title>Todos los Artistas</title>
+    <link rel="stylesheet" href="css/todoartis.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -12,21 +12,16 @@
         <ul>
         <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
         <li><a class="titulos" href="tracks.html">TRACKS</a></li>
-        <li><a class="titulos" href="albums.html">ÁLBUM</a></li>
-        <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
+        <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
+        <li><a class="titulos" href="todosArtistas.js">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>
     </div>
-    <div class="orden">
-        <header class="principio">
-            <h1 class="titulo"></h1>
-            <h2 class="artista"></h2>
-            <div class="descripcion">
-                <p></p>
-            </div>
-            <img class="weeknd" src="" alt="" srcset="">
-        </header>
-    </div>
+    <section class="foto-bandas">
+        <div class="fotos">
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="futer">
           <ul class="fin">
@@ -36,11 +31,8 @@
             <li class="contenido-footer">Valentina Drechsler</li>
           </ul>
         </div>
-     </footer>
+    </footer>
 
- 
-    
-
-    <script src="tracks.js"></script>
+    <script src="todosArtistas.js"></script>
 </body>
 </html>
