--- a/detail.html
+++ b/detail.html
@@ -13,7 +13,7 @@
         <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
         <li><a class="titulos" href="">TRACKS</a></li>
         <li><a class="titulos" href="">ÁLBUM</a></li>
-        <li><a class="titulos" href="detail.html">ARTIST</a></li>
+        <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>
     </div>
