--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div> -->
 
 
-    <div class="slider">
+    <!-- <div class="slider1">
         <input type="radio" id="btn-1" name="toggle" checked>
         <input type="radio" id="btn-2" name="toggle">
         <input type="radio" id="btn-3" name="toggle">
@@ -71,10 +71,35 @@
             </div>                        
         </div>
     </div>
-</section>
-<section class="banner">
-    <img class="banner" src="img/technomusica.jpg" alt="">
-</section>
+</section> -->
+
+<div class="slideshow-container">
+
+    <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div> 
+        <!-- texto que se puede borrar -->
+        <img class="carru" src="img/slider1.jpg" style="width:100%">
+        <div class="text"></div>
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img class="carru" src="img/slider2.jpg" style="width:100%">
+        <div class="text"></div>
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img class="carru" src="img/slider3.jpg" style="width:100%">
+        <div class="text"></div>
+    </div>
+    
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+
+
    <footer class="todos">   
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
